--- a/csharp-examples.csproj
+++ b/csharp-examples.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>csharp_examples</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
+  </ItemGroup>
+
 </Project>
